@@ -1,61 +1,0 @@
-/*****************************************************************************
-    MQ2Main.dll: MacroQuest2's extension DLL for EverQuest
-    Copyright (C) 2002-2003 Plazmic, 2003-2005 Lax
-
-    This program is free software; you can redistribute it and/or modify
-    it under the terms of the GNU General Public License, version 2, as published by
-    the Free Software Foundation.
-
-    This program is distributed in the hope that it will be useful,
-    but WITHOUT ANY WARRANTY; without even the implied warranty of
-    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-    GNU General Public License for more details.
-******************************************************************************/
-
-DATATYPE(MQ2SpawnType,pSpawnType,"EQ Objects");
-DATATYPE(MQ2PetType, pPetType, "EQ Objects");
-DATATYPE(MQ2MercenaryType, pMercenaryType, "EQ Objects");
-DATATYPE(MQ2CharacterType, pCharacterType, "EQ Objects");
-
-DATATYPE(MQ2BuffType,pBuffType,0);
-DATATYPE(MQ2TargetBuffType, pTargetBuffType, 0)
-DATATYPE(MQ2SpellType, pSpellType, "EQ Objects");
-DATATYPE(MQ2TicksType,pTicksType,0);
-
-DATATYPE(MQ2SkillType,pSkillType,"EQ Skill");
-DATATYPE(MQ2AltAbilityType,pAltAbilityType,"EQ Alt Ability");
-
-DATATYPE(MQ2ClassType,pClassType,"EQ Class");
-DATATYPE(MQ2RaceType,pRaceType,"EQ Race");
-DATATYPE(MQ2BodyType,pBodyType,"EQ Body");
-
-DATATYPE(MQ2GroundType,pGroundType,0);
-DATATYPE(MQ2SwitchType,pSwitchType,0);
-
-DATATYPE(MQ2MacroQuestType,pMacroQuestType,"MacroQuest Object");
-
-DATATYPE(MQ2CorpseType,pCorpseType,0);
-DATATYPE(MQ2WindowType,pWindowType,0);
-DATATYPE(MQ2MerchantType,pMerchantType,0);
-DATATYPE(MQ2ZoneType,pZoneType,"EQ Zone");
-DATATYPE(MQ2CurrentZoneType,pCurrentZoneType,"EQ CurrentZone");
-DATATYPE(MQ2ItemType,pItemType,0);
-DATATYPE(MQ2DeityType,pDeityType,"EQ Deity");
-DATATYPE(MQ2ArgbType,pArgbType,0);
-
-DATATYPE(MQ2HeadingType,pHeadingType,0);
-
-DATATYPE(MQ2InvSlotType,pInvSlotType,"EQ InvSlot");
-
-DATATYPE(MQ2TimerType,pTimerType,0);
-
-DATATYPE(MQ2RaidType,pRaidType,"EQ Raid");
-DATATYPE(MQ2RaidMemberType,pRaidMemberType,"EQ RaidMember");
-DATATYPE(MQ2GroupType,pGroupType,"EQ Group");
-DATATYPE(MQ2GroupMemberType,pGroupMemberType,"EQ GroupMember");
-
-DATATYPE(MQ2FriendsType,pFriendsType,0);
-
-DATATYPE(MQ2TargetType,pTargetType,"EQ Target");
-
-DATATYPE(MQ2XTargetType,pXTargetType,"EQ XTarget");
