@@ -33,16 +33,6 @@ GNU General Public License for more details.
 #endif
 
 #ifndef ISXEQ
-LEGACY_API class MQ2FloatType *pFloatType;
-LEGACY_API class MQ2StringType *pStringType;
-LEGACY_API class MQ2IntType *pIntType;
-LEGACY_API class MQ2ByteType *pByteType;
-LEGACY_API class MQ2BoolType *pBoolType;
-LEGACY_API class MQ2TimeType *pTimeType;
-LEGACY_API class MQ2MathType *pMathType;
-LEGACY_API class MQ2MacroType *pMacroType;
-LEGACY_API class MQ2PluginType *pPluginType;
-
 #define pIntPtrType pIntType
 #define pBytePtrType pByteType
 #define pBoolPtrType pBoolType
@@ -53,6 +43,7 @@ LEGACY_API class MQ2PluginType *pPluginType;
 #define BOOLPTR(x) Dest.DWord=x
 #define FLOATPTR(x) Dest.Float=x
 
+#define TypeMember(name) AddMember((DWORD)name,""#name)
 #define TypeMethod(x)
 #define AddMethod(x,y)
 #else
@@ -64,62 +55,11 @@ LEGACY_API class MQ2PluginType *pPluginType;
 #define Argb RGB
 #define MQ2VARPTR LSOBJECTDATA
 #endif
-LEGACY_VAR class MQ2SpawnType *pSpawnType;
-LEGACY_VAR class MQ2CharacterType *pCharacterType;
-LEGACY_VAR class MQ2BuffType *pBuffType;
-LEGACY_VAR class MQ2TargetBuffType *pTargetBuffType;
-LEGACY_VAR class MQ2SpellType *pSpellType;
-LEGACY_VAR class MQ2TicksType *pTicksType;
 
-LEGACY_VAR class MQ2SkillType *pSkillType;
-LEGACY_VAR class MQ2AltAbilityType *pAltAbilityType;
-
-LEGACY_VAR class MQ2ClassType *pClassType;
-LEGACY_VAR class MQ2RaceType *pRaceType;
-LEGACY_VAR class MQ2BodyType *pBodyType;
-
-LEGACY_VAR class MQ2GroundType *pGroundType;
-LEGACY_VAR class MQ2SwitchType *pSwitchType;
-
-LEGACY_VAR class MQ2MacroQuestType *pMacroQuestType;
-
-LEGACY_VAR class MQ2CorpseType *pCorpseType;
-LEGACY_VAR class MQ2WindowType *pWindowType;
-LEGACY_VAR class MQ2MerchantType *pMerchantType;
-LEGACY_VAR class MQ2MercenaryType *pMercenaryType;
-LEGACY_VAR class MQ2PetType *pPetType;
-LEGACY_VAR class MQ2ZoneType *pZoneType;
-LEGACY_VAR class MQ2CurrentZoneType *pCurrentZoneType;
-LEGACY_VAR class MQ2ItemType *pItemType;
-LEGACY_VAR class MQ2DeityType *pDeityType;
-LEGACY_VAR class MQ2ArgbType *pArgbType;
-LEGACY_VAR class MQ2TypeType *pTypeType;
-
-LEGACY_VAR class MQ2HeadingType *pHeadingType;
-
-LEGACY_VAR class MQ2InvSlotType *pInvSlotType;
-
-LEGACY_VAR class MQ2ArrayType *pArrayType;
-LEGACY_VAR class MQ2TimerType *pTimerType;
-
-LEGACY_VAR class MQ2RaidType *pRaidType;
-LEGACY_VAR class MQ2RaidMemberType *pRaidMemberType;
-
-LEGACY_VAR class MQ2GroupType *pGroupType;
-LEGACY_VAR class MQ2GroupMemberType *pGroupMemberType;
-LEGACY_VAR class MQ2EvolvingItemType *pEvolvingItemType;
-LEGACY_VAR class MQ2DynamicZoneType *pDynamicZoneType;
-LEGACY_VAR class MQ2DZMemberType *pDZMemberType;
-LEGACY_VAR class MQ2FellowshipType *pFellowshipType;
-LEGACY_VAR class MQ2FellowshipMemberType *pFellowshipMemberType;
-LEGACY_VAR class MQ2FriendsType *pFriendsType;
-LEGACY_VAR class MQ2TaskMemberType *pTaskMemberType;
-LEGACY_VAR class MQ2TaskType *pTaskType;
-LEGACY_VAR class MQ2TargetType *pTargetType;
-LEGACY_VAR class MQ2XTargetType *pXTargetType;
-
-#define UseTemp(mystring) strcpy(DataTypeTemp,mystring)
-#define TypeMember(name) AddMember((DWORD)name,""#name)
+// Datatype Declarations
+#define DATATYPE(_class_, _var_, _inherits_, _persistentclass_) LEGACY_VAR class _class_ *_var_;
+#include "DataTypeList.h"
+#undef DATATYPE
 
 #ifndef ISXEQ
 class MQ2BoolType : public MQ2Type
